--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [  # Optional
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Build Tools",
 
-  "License :: OSI Approved :: MIT License",
+  "License :: OSI Approved :: GPL-3.0 License",
 
   # Specify the Python versions you support here. In particular, ensure
   # that you indicate you support Python 3. These classifiers are *not*
@@ -58,3 +58,11 @@ scriptcommander = "scriptcommander.ui.main:manager"
 [build-system]
 requires      = ["setuptools>=43.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["scriptcommander",
+            "scriptcommander.database",
+            "scriptcommander.logging",
+            "scriptcommander.scripts",
+            "scriptcommander.tools",
+            "scriptcommander.ui"]
